# pylos

./: Cargo.toml
files/docker/: .env  compose.yml  traefik.yml
src/: main.rs
src/utils/: docker_compose.rs  general.rs
tests/: cli.rs
