[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
assert_cmd = "2.0.14"
bollard = { version = "0.15.0", features = ["ssl"] }
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
lazy_static = "1.4.0"
predicates = "3.1.0"
rust-embed = "8.5.0"
serde = "1.0.195"
serde_merge = "0.1.3"
serde_yaml = "0.9.30"
subprocess = "0.2.9"
sysexits = "0.7.11"
tokio = { version = "1.35.1", features = ["full"] }
tokio-macros = "2.2.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
